--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,5 +5,6 @@ import Button from '../components/Button.astro';
 <MainLayout title="Titel">
 	<article>
 		<p>Index indhold</p>
+		<h1 class="text-background">Engangs?</h1>
 	</article>
 </MainLayout>
