--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,3 +1,160 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  @font-face {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(Roboto.ttf);
+  }
+
+  .roboto-thin {
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-style: normal;
+    src: url(Roboto-Thin.ttf);
+  }
+
+  .roboto-light {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    src: url(Roboto-Light.ttf);
+  }
+
+  .roboto-regular {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    src: url(Roboto-Regular.ttf);
+  }
+
+  .roboto-medium {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    src: url(Roboto-Medium.ttf);
+  }
+
+  .roboto-bold {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    src: url(Roboto-Bold.ttf);
+  }
+
+  .roboto-bold-talic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    src: url(Roboto-Boldtalic.ttf);
+  }
+
+  .roboto-black {
+    font-family: "Roboto", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+    src: url(Roboto-Black.ttf);
+  }
+
+  h1 {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    src: url(Roboto-Bold.ttf);
+    font-size: 64px;
+  }
+
+  h2 {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    src: url(Roboto-Bold.ttf);
+    font-size: 36px;
+  }
+
+  h3 {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    src: url(Roboto-Bold.ttf);
+    font-size: 24px;
+  }
+
+  h4 {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    src: url(Roboto-Boldtalic.ttf);
+    font-size: 24;
+  }
+
+  p {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    src: url(Roboto-Light.ttf);
+    font-size: 16px;
+  }
+
+  footer {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    src: url(Roboto-Light.ttf);
+    font-size: 12px;
+  }
+
+  @media (min-width: 800px) {
+    h1 {
+      font-family: "Roboto", sans-serif;
+      font-weight: 700;
+      font-style: normal;
+      src: url(Roboto-Bold.ttf);
+      font-size: 34px;
+    }
+
+    h2 {
+      font-family: "Roboto", sans-serif;
+      font-weight: 700;
+      font-style: normal;
+      src: url(Roboto-Bold.ttf);
+      font-size: 24px;
+    }
+
+    h3 {
+      font-family: "Roboto", sans-serif;
+      font-weight: 700;
+      font-style: normal;
+      src: url(Roboto-Bold.ttf);
+      font-size: 20px;
+    }
+
+    h4 {
+      font-family: "Roboto", sans-serif;
+      font-weight: 700;
+      font-style: normal;
+      src: url(Roboto-Boldtalic.ttf);
+      font-size: 20;
+    }
+
+    p {
+      font-family: "Roboto", sans-serif;
+      font-weight: 300;
+      font-style: normal;
+      src: url(Roboto-Light.ttf);
+      font-size: 14px;
+    }
+
+    footer {
+      font-family: "Roboto", sans-serif;
+      font-weight: 300;
+      font-style: normal;
+      src: url(Roboto-Light.ttf);
+      font-size: 10px;
+    }
+  }
+}
