--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,5 +1,31 @@
 ---
+// Henter parametrene fra Astro.props
+
+//Definer den styling (Tailwind classes, der gør sig gældende for alle knapper
+const { variant = "primary", size = "medium" } = Astro.props;
+
+//Definer den styling (Tailwind classes), der gør sig gældende for de forskellige varianter
+const buttonStyling = "text-black ";
+
+//Definer den styling (Tailwind classes), der gør sig gældende for de forskelligeog størrelser.
+const variantClasses = {
+  primary:
+    "bg-[#ff1054] text-white hover:bg-yellow-50 hover:text-[#3C4A30] px-3 py-2 rounded-full transition duration-100 ease-in-out ",
+
+  secondary:
+    "bg-red-900 text-yellow-50 hover:text-red-900 hover:bg-yellow-50 px-3 py-2 rounded-full transition duration-100 ease-in-out ",
+};
+
+//Definer den styling (Tailwind classes), der gør sig gældende for de forskelligeog størrelser.
+const sizeClasses = {
+  large: "p-6 text-xl",
+  medium: "p-6 text-md",
+  small: "p-6 text-sm",
+};
 ---
-<div>
-    <button><slot /></button>
-</div>
+
+<button
+  class:list={[buttonStyling, variantClasses[variant], sizeClasses[size]]}
+>
+  <slot />
+</button>
