--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,32 +1,35 @@
 ---
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
-import '../styles/tailwind.css';
-import '../styles/global.css';
-import 'animate.css';
+import "../styles/tailwind.css";
+import "../styles/global.css";
+import "animate.css";
 const { title } = Astro.props;
 ---
+
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{Astro.props.title}</title>
-	</head>
-	<body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <meta
+      name="description"
+      content="Join the movement for a Plastic Change! Let's ditch single-use plastics and embrace sustainable alternatives. We can all make a difference. #SingleUseSucks"
+    />
+    <title>{Astro.props.title}</title>
+  </head>
+  <body>
+    <header>
+      <Header />
+    </header>
 
-		<header>
-			<Header></Header>
-		</header>
-		
-		<main>
-			<slot />
-		</main>
+    <main>
+      <slot />
+    </main>
 
-		<footer>
-			<Footer></Footer>
-		</footer>
-			
-	</body>
+    <footer>
+      <Footer />
+    </footer>
+  </body>
 </html>
