--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,9 @@ import Button from "../components/Button.astro";
 
 <div>
   <footer class="bg-white p-4">
-    <Image src={Logo} alt="PlasticChange_logo" class="w-32" />
+    <a href="#">
+      <Image src={Logo} alt="PlasticChange_logo" class="w-32" />
+    </a>
     <div class="container mx-auto py-8">
       <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
         <div class="col-span-1">
@@ -33,8 +35,10 @@ import Button from "../components/Button.astro";
               placeholder="E-mail adresse*"
               class="placeholder-black rounded-full bg-white focus:bg-white p-3 focus:ring-0 px-7 border-black focus:border-black w-full active:bg-gray-700 focus:outline-none"
             />
+            <div class="py-4">
+              <Button variant="primary" size="large">Tilmeld</Button>
+            </div>
           </div>
-          <Button variant="primary" size="large">Tilmeld</Button>
           <span>© 2024 Plastic Change</span>
         </div>
         <div class="col-span-1">
