--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,6 +1,7 @@
 ---
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
+import Sektion_2 from "../components/Sektion_2.astro"
 import "../styles/tailwind.css";
 import "../styles/global.css";
 import "animate.css";
@@ -26,6 +27,7 @@ const { title } = Astro.props;
 
     <main>
       <slot />
+      <Sektion_2>
     </main>
 
     <footer>
