--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,24 @@
 ---
+import { Image } from "astro:assets";
+import Logo from "../assets/images/plasticchange_logo.svg";
+import Button from "../components/Button.astro";
 ---
+
 <div>
-Header
+  <header class="bg-white p-4">
+    <a href="#">
+      <Image src={Logo} alt="PlasticChange_logo" class="w-50" />
+    </a>
+    <nav>
+      <ul>
+        <li>Generelt</li>
+        <li>Vores arbejde</li>
+        <li>Hvad kan du gøre?</li>
+        <li>Videnscenter</li>
+        <li>Merchandise</li>
+      </ul>
+      <Button variant="primary" size="medium">Bliv medlem</Button>
+      <Button variant="secondary" size="medium">Støt os</Button>
+    </nav>
+  </header>
 </div>
