--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,4 @@
 body {
-  background-color: #002438;
   --xxlg-size: 3rem;
   --xlg-size: 1.4rem;
   --lg-size: 1.4rem;
@@ -13,20 +12,33 @@ body {
   src: url(Roboto-Thin.ttf);
 }
 
+* {
+  font-family: Roboto-Thin;
+}
+
+main {
+  background-color: #030915;
+}
+
 h1,
-h2,
+h2, h3, h4,
 p {
   color: #fdfdfd;
+  font-family: Roboto-Thin;
 }
 
 h3 {
   color: #ff1054;
-  font-family: Roboto-Thin;
 }
 
 footer {
   color: #54647e;
 }
+
+footer h4 {
+  color: #1E293B;
+}
+
 
 .burger {
   color: #b1c0d8;
