--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,20 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
+import Sektion1 from "../components/Sektion_1.astro";
+import Sektion_2 from "../components/Sektion_2.astro"
 ---
 <MainLayout title="Titel">
 	<article>
 		<p>Index indhold</p>
 		<h1 class="text-background">Engangs?</h1>
+
+		<section>
+			<Sektion1/>
+
+		</section>
+
+		<section>
+			<Sektion_2>
+		</section>
 	</article>
 </MainLayout>
