--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -108,13 +108,13 @@
     font-size: 12px;
   }
 
-  @media (min-width: 800px) {
+  @media (max-width: 800px) {
     h1 {
       font-family: "Roboto", sans-serif;
       font-weight: 700;
       font-style: normal;
       src: url(Roboto-Bold.ttf);
-      font-size: 34px;
+      font-size: 28px;
     }
 
     h2 {
