--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -12,7 +12,7 @@ const variantClasses = {
 };
 
 const sizeClasses = {
-  large: "p-6 text-lg",
+  large: "p-6 text-md lg:p-6 lg:text-lg",
   medium: "p-6 text-md",
   small: "p-6 text-sm",
 };
