--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import MainLayout from "../layouts/MainLayout.astro";
 import Sektion1 from "../components/Sektion_1.astro";
 import Sektion_2 from "../components/Sektion_2.astro"
+import Sektion3 from "../components/Sektion_3.astro";
 ---
 <MainLayout title="Titel">
 	<article>
@@ -14,7 +15,11 @@ import Sektion_2 from "../components/Sektion_2.astro"
 		</section>
 
 		<section>
-			<Sektion_2>
+			<Sektion_2/>
+		</section>
+
+		<section>
+			<Sektion3/>
 		</section>
 	</article>
 </MainLayout>
