--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -4,6 +4,14 @@
 
 @layer base {
   @font-face {
+    font-family: "Rubik";
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url(Rubik-Bold.ttf);
+  }
+
+  @font-face {
     font-family: "Roboto";
     font-style: normal;
     font-weight: 400;
