section 4 added og done

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import MainLayout from "../layouts/MainLayout.astro";
 import Sektion_2 from "../components/Sektion_2.astro";
 import HeroUnit from "../components/HeroUnit.astro";
+import Section_4 from "../components/Section_4.astro"
 ---
 <MainLayout title="Titel">
 	<article class="bg px-6">
@@ -9,6 +10,7 @@ import HeroUnit from "../components/HeroUnit.astro";
 			<HeroUnit/>
 		</div>
 		<Sektion_2/>
+		<Section_4/>
 	</article>
 </MainLayout>
 
