section5 first commit

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,9 @@
 import MainLayout from "../layouts/MainLayout.astro";
 import Sektion_2 from "../components/Sektion_2.astro";
 import HeroUnit from "../components/HeroUnit.astro";
-import Section_4 from "../components/Section_4.astro"
+import Section_4 from "../components/Section_4.astro";
+import Section_5 from "../components/Section_5.astro";
+
 ---
 <MainLayout title="Titel">
 	<article class="bg px-6">
@@ -11,6 +13,8 @@ import Section_4 from "../components/Section_4.astro"
 		</div>
 		<Sektion_2/>
 		<Section_4/>
+		<Section_5/>
+
 	</article>
 </MainLayout>
 
