--- a/src/components/Section_4.astro
+++ b/src/components/Section_4.astro
@@ -1,6 +1,6 @@
 ---
 ---
-<h3 class="text-center">8 gode råd</h3>
+<h3 class="text-center pb-6 lg:text-[28px]">8 gode råd</h3>
 <!--indsæt DR animation af billeder her for udstyr -->
 <article class="sticky">
     <div class="sticky top-1/4 mangeelementerinview grid grid-cols-2 md:grid-cols-4 text-center">
