--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,17 +9,14 @@ import Section_5 from "../components/Section_5.astro";
 ---
 <MainLayout title="Titel">
 	<article class="bg px-6">
-			<div class="bg-[url('/images/herounit.webp')] bg-cover bg-no-repeat mx-auto ">
+			<div class="bg-[url('/images/hero.png')] bg-cover bg-no-repeat mx-auto">
 				<HeroUnit/>
 			</div>
-
-		<Sektion1/>
-		<Sektion_2/>
-		<Sektion3/>
-		<Section_4/>
-		<Section_5/>
-		
-
+			<Sektion1/>
+			<Sektion_2/>
+			<Sektion3/>
+			<Section_4/>
+			<Section_5/>
 	</article>
 </MainLayout>
 
@@ -27,4 +24,6 @@ import Section_5 from "../components/Section_5.astro";
 	.bg{
 		background-color: #030915;
 	}
+	
 </style>
+
