--- a/src/components/HeroUnit.astro
+++ b/src/components/HeroUnit.astro
@@ -1,11 +1,12 @@
 ---
 import Button from "../components/Button.astro";
 ---
-<div class=" grid grid-cols-2 text-center "><!-- indsæt grid_1-1 -->
+<div class=" grid grid-cols-2 text-center pb-20"><!-- indsæt grid_1-1 -->
     <div><!--tom div --></div>
     <div class="lg:py-[300px]"> 
         <h1 class="roboto-bold">Engangs? Aldrig igen!</h1>
-        <h2 class="text-base roboto-medium">#SingleUseSucks</h2>
+        <h2 class="text-base roboto-medium md:text-2xl lg:text-4xl py-2 lg:py-6">#SingleUseSucks</h2>
         <Button variant="primary" size="large">Støt vores arbejde</Button>
     </div>
 </div>
+
