--- a/src/components/Section_5.astro
+++ b/src/components/Section_5.astro
@@ -1,8 +1,8 @@
 ---
 import Button from "../components/Button.astro";
 ---
-
-<div class="shop py-8 md:flex md:flex-row-reverse md:justify-around">
+<div class="bg-[url('/images/havbund.png')] bg-cover bg-no-repeat mx-auto"> 
+<div class="shop pt-32 pb-8 md:flex md:flex-row-reverse md:justify-around">
 
     <section class="text-center pt-2 pb-10 md:pt-32 lg:pt-40">
         <h3 class="text-[#f6f6f6] pb-3 lg:pb-6">Støt os med et bidrag – eller besøg vores shop</h3>
@@ -43,7 +43,28 @@ import Button from "../components/Button.astro";
                 <Button variant="støtOs" size="large">Støt vores arbejde</Button>
                 </div>
             </div>
-        
-    
     </section>
+</div>
+
+<section class="text-center py-24">
+    <h3 class="text-[#f6f6f6]">Husk World Cleanup Day den 16. september 2024</h3>
+    <h3 class="text-[#f6f6f6]">For mere info <a class="hover:text-[#ff1054] hover:underline hover:underline-offset-3 transition duration-100 ease-in-out" href="www.worldcleanupday.dk">www.worldcleanupday.dk</a></h3>
+    <h3 class="text-[#f6f6f6] lg:text-[30px] pt-20">#SingleUseSucks</h3>
+    <div class="flex justify-center gap-4 lg:gap-8 self-center py-10 ">
+
+        <a class=" w-[38px] h-[38px] lg:w-[50px] lg:h-[50px] bg-[url('/SoMeIkoner/insta.svg')] bg-no-repeat hover:bg-[url('/SoMeIkoner/insta_hover.svg')] transition duration-100 ease-in-out" href="www.instagram.com/plasticchange/"></a>
+
+        <a class=" w-[52px] h-[44px] lg:w-[66px] lg:h-[56px] bg-[url('/SoMeIkoner/youtube.svg')] bg-no-repeat hover:bg-[url('/SoMeIkoner/youtube_hover.svg')] transition duration-100 ease-in-out" href="www.youtube.com/@plasticchange5159"></a>
+
+        <a class="w-[30px] h-[36px] ml-1 lg:ml-0 lg:w-[40px] lg:h-[46px] bg-[url('/SoMeIkoner/facebook.svg')] bg-no-repeat hover:bg-[url('/SoMeIkoner/facebook_hover.svg')] transition duration-100 ease-in-out" href="www.facebook.com/plasticchange/?locale=da_DK"></a>
+
+        <a class="w-[36px] h-[38px] lg:w-[44px] lg:h-[52px] bg-[url('/SoMeIkoner/x.svg')] bg-no-repeat hover:bg-[url('/SoMeIkoner/x_hover.svg')] transition duration-100 ease-in-out" href="www.twitter.com/PlasticChange"></a>
+
+        <a class="w-[36px] h-[36px] lg:w-[45px] lg:h-[52px] bg-[url('/SoMeIkoner/linkedin.svg')] bg-no-repeat hover:bg-[url('/SoMeIkoner/linkedin_hover.svg')] transition duration-100 ease-in-out" href="www.linkedin.com/company/plastic-change/"></a>
+
        
+
+       
+    </div>
+</section>
+</div>
