--- a/src/components/Section_5.astro
+++ b/src/components/Section_5.astro
@@ -1,7 +1,7 @@
 ---
 import Button from "../components/Button.astro";
 ---
-<div class="bg-[url('/images/havbund.png')] bg-cover bg-no-repeat mx-auto"> 
+<div class="bg-[url('/images/havbund.webp')] bg-cover bg-no-repeat mx-auto"> 
 <div class="shop pt-32 pb-8 md:flex md:flex-row-reverse md:justify-around">
 
     <section class="text-center pt-2 pb-10 md:pt-32 lg:pt-40">
