--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Section_5 from "../components/Section_5.astro";
 ---
 <MainLayout title="Titel">
 	<article class="bg px-6">
-			<div class="bg-[url('/images/hero.png')] bg-cover bg-no-repeat mx-auto">
+			<div class="bg-[url('/images/hero.webp')] bg-cover bg-no-repeat mx-auto">
 				<HeroUnit/>
 			</div>
 			<Sektion1/>
