--- a/src/components/Sektion_1.astro
+++ b/src/components/Sektion_1.astro
@@ -1,11 +1,15 @@
 ---
-
 ---
 
 
 
-<div class="px-10 lg:pl-52 lg:w-1/2">
-    <h3 class="px-10 sticky top-10 lg:pl-0">Plastikforurening</h3>
+<div class="px-10 lg:pl-52 ">
+    <div class="px-10 sticky top-10 lg:pl-0 lg:grid lg:grid-cols-2 gap-44">
+    <h3 class="">Plastikforurening</h3>
+    <img class="invisible lg:visible lg:max-w-xs lg:pr-10 lg:animate-pulse pulse lg:py-10" src="/public/images/brugteflasker.png">
+</div>
+
+    <div class="lg:w-1/2">
     <div class="items-center sticky top-20 h-screen w-100 bg-[#030915] ">
         <p class="px-10 py-10 lg:pl-0">Plastforurening i havene er et hastigt voksende problem med årligt 8-10 millioner tons, der ender der.</p>
     </div>
@@ -27,5 +31,12 @@
     </div>
 </div>
 </div>
+</div>
 
-class="flex items-center sticky top-0 h-screen w-100 bg-blue-500"
+
+<style>
+    .pulse {
+        animation-iteration-count: 6;
+        animation-duration: 4s;
+    }
+</style>
