rettet footer og støt os i section 5

--- a/src/components/Section_5.astro
+++ b/src/components/Section_5.astro
@@ -4,12 +4,12 @@ import Button from "../components/Button.astro";
 <div class="bg-[url('/images/havbund.webp')] bg-cover bg-no-repeat mx-auto"> 
 <div class="shop pt-32 pb-8 md:flex md:flex-row-reverse md:justify-around">
 
-    <section class="text-center pt-2 pb-10 md:pt-32 lg:pt-40">
+    <section class="text-center pt-2 pb-10 md:mx-6 md:pt-32 lg:pt-40">
         <h3 class="text-[#f6f6f6] pb-3 lg:pb-6">Støt os med et bidrag – eller besøg vores shop</h3>
         <Button variant="primary" size="medium">Merchandise</Button>
     </section>
 
-    <section class="bg-[#f6f6f6] w-[340px] mx-auto md:w-[390px] md:mx-0 lg:w-[440px]">
+    <section class="bg-[#f6f6f6] w-[300px] mx-auto md:w-[390px] md:mx-6 lg:w-[440px]">
         <div class="block">
             <h3 class="text-[#1E293B] ml-[16px] pt-[26px] lg:ml-[34px] lg:pt-[34px]">Støt os</h3>
             <div class="mt-4 flex mx-[24px] justify-between lg:mx-[44px] lg:py-2">
@@ -37,7 +37,7 @@ import Button from "../components/Button.astro";
      
             <div class="text-center pb-[26px] lg:pb-[34px]">
                 <label class="">
-                    <input type="number" class="form-input mt-6 mx-[28px] md:mx-auto w-[280px] md:w-[290px] block rounded-full lg:w-[370px] lg:mb-2 lg:mt-8" placeholder="Andet beløb">
+                    <input type="number" class="form-input mt-6 mx-auto md:mx-6 w-[294px] md:w-[300px] block rounded-full lg:w-[370px] lg:mb-2 lg:mt-8" placeholder="Andet beløb">
                 </label>
                 <div class="mx-auto block pt-4">
                 <Button variant="støtOs" size="large">Støt vores arbejde</Button>
