--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ import Button from "../components/Button.astro";
 ---
 
 <div>
-  <footer class="bg-white p-4">
+  <footer class="bg-[#f6f6f6] p-6 md:px-10 lg:px-20">
     <a href="#">
       <Image src={Logo} alt="PlasticChange_logo" class="w-32" />
     </a>
@@ -41,7 +41,7 @@ import Button from "../components/Button.astro";
           </div>
           <span>© 2024 Plastic Change</span>
         </div>
-        <div class="col-span-1">
+        <div class="col-span-1 md:pl-28 lg:pl-40">
           <ul>
             <h4 class="mt-5">Bank</h4>
             <li class="my-1">MobilPay 304961</li>
