--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import MainLayout from "../layouts/MainLayout.astro";
 import Sektion1 from "../components/Sektion_1.astro";
 import Sektion_2 from "../components/Sektion_2.astro"
-import Sektion3 from "../components/Sektion_3.astro";
+import Sektion_3 from "../components/Sektion_3.astro";
 import HeroUnit from "../components/HeroUnit.astro";
 import Section_4 from "../components/Section_4.astro";
 import Section_5 from "../components/Section_5.astro";
@@ -15,7 +15,7 @@ import Section_5 from "../components/Section_5.astro";
 			</div>
 			<Sektion1/>
 			<Sektion_2/>
-			<Sektion3/>
+			<Sektion_3/>
 			<Section_4/>
 			<Section_5/>
 		</div>
