--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -10,6 +10,9 @@ const variantClasses = {
   secondary:
     "bg-white text-[#ff1054] hover:bg-[#ff1054] hover:text-white hover:border-3 px-3 py-2 rounded-full transition duration-100 ease-in-out border border-[#ff1054]",
 
+  tertiary:
+  "bg-none text-white hover:bg-[#ff1054] hover:text-white hover:border-3 px-3 py-2 rounded-full transition duration-100 ease-in-out border-2 border-white",
+
    rounded:
    "bg-[#ff1054] text-white hover:bg-white hover:text-[#ff1054] hover:border-3 p-10 rounded-full transition duration-100 ease-in-out border border-[#ff1054]",
 
@@ -22,9 +25,9 @@ const variantClasses = {
 };
 
 const sizeClasses = {
-  large: "p-6 text-md lg:p-6 lg:text-lg",
-  medium: "p-6 text-md",
-  small: "p-6 text-sm",
+  large: "p-8 text-md lg:p-6 lg:text-lg",
+  medium: "px-8 text-md",
+  small: "p-8 text-sm",
 };
 ---
 
