--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -5,27 +5,29 @@ const buttonStyling = "text-black ";
 
 const variantClasses = {
   primary:
-    "bg-[#ff1054] text-white hover:bg-white hover:text-[#ff1054] hover:border-3 px-3 py-2 rounded-full transition duration-100 ease-in-out border border-[#ff1054]",
+    "bg-[#ff1054] text-white hover:bg-white hover:text-[#ff1054] hover:border-2 px-3 py-2 rounded-full transition duration-100 ease-in-out border-2 border-[#ff1054]",
 
   secondary:
-    "bg-white text-[#ff1054] hover:bg-[#ff1054] hover:text-white hover:border-3 px-3 py-2 rounded-full transition duration-100 ease-in-out border border-[#ff1054]",
+    "bg-[#ff1054] text-white hover:bg-white hover:text-[#ff1054] hover:border-2 px-3 py-2 rounded-full transition duration-100 ease-in-out border-2 border-[#ff1054]",
 
   tertiary:
-  "bg-none text-white hover:bg-[#ff1054] hover:text-white hover:border-3 px-3 py-2 rounded-full transition duration-100 ease-in-out border-2 border-white",
+    "bg-none text-white hover:bg-[#ff1054] hover:text-white hover:border-2 px-3 py-2 rounded-full transition duration-100 ease-in-out border-2 border-white",
 
-   rounded:
-   "bg-[#ff1054] text-white hover:bg-white hover:text-[#ff1054] hover:border-3 p-10 rounded-full transition duration-100 ease-in-out border border-[#ff1054]",
+  quaternary:
+    "bg-trans text-[#1E293B] hover:bg-white hover:text-[#ff1054] hover:border-2 px-3 py-2 rounded-full transition duration-100 ease-in-out border-2 border-[#1E293B] hover:border-[#ff1054]",
 
-   rounded2:
-   "bg-[#ff1054] text-white hover:bg-white hover:text-[#ff1054] hover:border-3 py-6 px-7 lg:px-7 rounded-full transition duration-100 ease-in-out border border-[#ff1054]",
+  rounded:
+    "bg-[#ff1054] text-white hover:bg-white hover:text-[#ff1054] hover:border-2 p-10 rounded-full transition duration-100 ease-in-out border-2 border-[#ff1054]",
 
-   støtOs:
-    "bg-[#ff1054] text-white hover:bg-white hover:text-[#ff1054] hover:border-3 px-20 py-2 md:px-18 lg:px-28 lg:py-2 rounded-full transition duration-100 ease-in-out border border-[#ff1054]",
-    
+  rounded2:
+    "bg-[#ff1054] text-white hover:bg-white hover:text-[#ff1054] hover:border-2 py-6 px-7 lg:px-7 rounded-full transition duration-100 ease-in-out border-2 border-[#ff1054]",
+
+  støtOs:
+    "bg-[#ff1054] text-white hover:bg-white hover:text-[#ff1054] hover:border-2 px-20 py-2 md:px-18 lg:px-28 lg:py-2 rounded-full transition duration-100 ease-in-out border border-[#ff1054]",
 };
 
 const sizeClasses = {
-  large: "p-8 text-md lg:p-6 lg:text-lg",
+  large: "p-8 text-lg lg:px-6 lg:text-xl",
   medium: "px-8 text-md",
   small: "p-8 text-sm",
 };
