--- a/src/components/Sektion_2.astro
+++ b/src/components/Sektion_2.astro
@@ -3,7 +3,8 @@ import { Image } from "astro:assets";
 import Iceberg from "../assets/images/iceberg.jpg";
 ---
 
-<div
+<section
+  id="staggeranimation"
   class="bg-[#062A3A] p-10 flex flex-col sm:flex-row items-start rounded-xl max-w-screen-md mx-auto"
 >
   <div class="order-2 sm:order-1">
@@ -11,8 +12,9 @@ import Iceberg from "../assets/images/iceberg.jpg";
   </div>
   <div class="flex-1 lg:px-10 py-2 order-1 sm:order-2">
     <h3 class="mt-0">En voksende trussel mod miljøet</h3>
-    <h4>Plastik i miljøet er et stort problem af flere grunde:</h4>
-    <ul class="p-4 text-white">
+    <h4 class="py-2">Plastik i miljøet er et stort problem af flere grunde:</h4>
+
+    <ul id="staggeranimation" class="p-4 text-white">
       <li class="list-disc py-2">
         Plastik nedbrydes ikke effektivt af bakterier og svampe.
       </li>
@@ -32,4 +34,17 @@ import Iceberg from "../assets/images/iceberg.jpg";
       </li>
     </ul>
   </div>
-</div>
+</section>
+
+<script>
+  /* Import af Motion One bibliotek */
+  import { animate, stagger, inView, scroll, timeline } from "motion";
+
+  const items = document.querySelectorAll("#horisontalliste li");
+  scroll(
+    animate("#horisontalliste", {
+      transform: ["none", `translateX(-${items.length - 1}00vw)`],
+    }),
+    { target: document.querySelector("#horisontalscrollsection") }
+  );
+</script>
