--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -23,11 +23,11 @@ const variantClasses = {
     "bg-[#ff1054] text-white hover:bg-white hover:text-[#ff1054] hover:border-2 py-6 px-7 lg:px-7 rounded-full transition duration-100 ease-in-out border-2 border-[#ff1054]",
 
   støtOs:
-    "bg-[#ff1054] text-white hover:bg-white hover:text-[#ff1054] hover:border-2 px-20 py-2 md:px-18 lg:px-28 lg:py-2 rounded-full transition duration-100 ease-in-out border border-[#ff1054]",
+    "bg-[#ff1054] text-white hover:bg-white hover:text-[#ff1054] hover:border-2 px-20 py-2 md:px-18 lg:px-28 lg:py-2 rounded-full transition duration-100 ease-in-out border-2 border-[#ff1054]",
 };
 
 const sizeClasses = {
-  large: "p-8 text-lg lg:px-6 lg:text-xl",
+  large: "p-8 text-lg lg:px-8 lg:text-xl",
   medium: "px-8 text-md",
   small: "p-8 text-sm",
 };
