--- a/src/components/Section_5.astro
+++ b/src/components/Section_5.astro
@@ -35,13 +35,15 @@ import Button from "../components/Button.astro";
 
         </div>
      
-            <div class="text-center pb-[26px] lg:pb-[34px]">
-                <label class="">
-                    <input type="number" class="form-input mt-6 mx-auto md:mx-6 w-[294px] md:w-[300px] block rounded-full lg:w-[370px] lg:mb-2 lg:mt-8" placeholder="Andet beløb">
-                </label>
-                <div class="mx-auto block pt-4">
+        <div class="text-center pb-[26px] lg:pb-[34px]">
+            <label class="">
+                <input type="number" class="form-input mt-6 mx-auto md:mx-6 w-[294px] md:w-[300px] block rounded-full lg:w-[370px] lg:mb-2 lg:mt-8 focus:border-[#ff69b4] focus:outline-none" placeholder="Andet beløb">
+            </label>
+            <div class="mx-auto block pt-4">
                 <Button variant="støtOs" size="large">Støt vores arbejde</Button>
-                </div>
+            </div>
+        </div>
+        
             </div>
     </section>
 </div>
