--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -20,7 +20,7 @@ const { title } = Astro.props;
     <title>{Astro.props.title}</title>
   </head>
   <body>
-    <header>
+    <header class="pb-32 lg:pb-0">
       <Header />
     </header>
 
