--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import Navbar from "../components/Navbar.astro";
 ---
 
 <div
-  class="ml-50 p-6 z-30 lg:bg-white bg-[#062A3A] py-10 lg:pr-12 lg:p-4 fixed w-full overflow-hidden lg:flex lg:flex-row justify-start items-center"
+  class="ml-50 p-6 z-30 lg:bg-[#f6f6f6] bg-[#062A3A] py-10 lg:pr-12 lg:p-4 fixed w-full overflow-hidden lg:flex lg:flex-row justify-start items-center"
 >
   <a href="#"
     ><Image
